--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="floating-message">Y'a des jolies filles,y'a des filles droles😁...</div>
     <div class="floating-message">Puis y'a toi...</div>
     <div class="floating-message">Si sauvage mais tellement SPECIALEEEEEE🧸</div>
-    <div class="floating-message">Gros Bisous 💋 Mouah sur Gros Front</div>
+    <div class="floating-message">Gros Bisous 💋 Mouah sur ton Gros Front</div>
     <div class="floating-message">🎁 Au fait...</div>
     <div class="floating-message">Merci d’être là! 🎂</div>
 
@@ -51,3 +51,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
